<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/transparent"
    >
    <LinearLayout android:id="@+id/menu_frame"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_centerInParent="true"
	    android:gravity="center_horizontal|bottom"
	    android:background="@drawable/menu_bg"
	    >
	    <EditText android:id="@+id/page_seach_text"
		    android:layout_width="200dp"
		    android:layout_height="wrap_content"/>
	    <LinearLayout 
	   		android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	android:layout_marginTop="8dp"
	    	android:layout_marginBottom="15dp"
	    	>
	        <Button android:id="@+id/page_seach_last"
				style="@style/button"
	    		android:background="@drawable/button_style"
	    		android:layout_marginRight="25dp"
	    		android:text="@string/page_menu_seach_last"/>
	        <Button android:id="@+id/page_seach_next"
				style="@style/button"
	    		android:background="@drawable/button_style"
	    		android:text="@string/page_menu_seach_next"/>
	    </LinearLayout>
    </LinearLayout>
    
    <TextView 
        style="@style/menu_title"
	    android:layout_alignTop="@+id/menu_frame"
	    android:layout_centerHorizontal="true"
	    android:text="@string/menu_title_page_seach"
	    />
    <TextView android:id="@+id/page_seach_progress"
   		android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:background="@android:drawable/toast_frame"
    	android:textColor="@android:color/white"
    	android:text="@string/page_seach_progress"
    	android:layout_centerInParent="true"
    	android:visibility="invisible"
    	/>
</RelativeLayout>