<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bookmark_manage_bg"
	>
    <LinearLayout android:id="@+id/bookmark_top"
		android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
		android:orientation="horizontal"
	    android:background="@drawable/bookmark_manage_top_bg"
	    android:gravity="center_vertical"
		android:paddingLeft="8dip"
		android:paddingRight="8dip"
		android:layout_alignParentTop="true"
        >
	    <Button android:id="@+id/bookmark_back"
      	    	style="@style/button"
	    	android:background="@drawable/back_button_style"
		    android:text="@string/bookmark_back"
		/>
	    <TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/bookmark_title"
		    android:layout_weight="1"
		    android:gravity="center_horizontal"
		/>
	    <Button android:id="@+id/bookmark_menu"
      	    	style="@style/button"
	    	android:background="@drawable/button_style"
		    android:text="@string/bookmark_menu"
		/>
	</LinearLayout>
	
    <ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_below="@+id/bookmark_top"
		>
        <TableLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
	    	android:id="@+id/bookmarks_table"
			>
        </TableLayout>
    </ScrollView>

</RelativeLayout>